--- a/all2.css
+++ b/all2.css
@@ -1,3 +1,159 @@
-h1{
-    color: orange;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* CSS RESET ↑  */
+
+/* padding: 10px; */
+
+.container{
+    width: 67.5vw;
+    margin: 0 auto;
+    padding-top: 80px;
+    font-family: 'Roboto', 'Noto Sans TC', sans-serif;
+    line-height: 1.5;
+}
+
+/* 搜尋框框↓ */
+.search-bar{
+    display: flex;
+    align-items: center;
+    width: 416px;
+    height: 56px;
+    border: 1px solid #4b4b4b;
+    border-radius: 40px;
+    padding-left: 16px;
+}
+
+.search-bar input {
+    border: none;
+    outline: none;
+    font-size: 16px;
+    font-weight: 500;
+    padding-left: 10px;
+}
+
+/* 9宮格小卡↓ */
+.wrap{
+    /* border: 5px solid black; */
+}
+
+.content {
+    display: inline-block;
+    width: 416px;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.content img{
+    width: 100%;
+}
+
+.time{
+    font-size: 16px;
+    color: black;
+    margin-top: 16px;
+    margin-bottom: 4px;
+}
+
+.tag{
+    font-size: 20px;
+    color: blue;
+    font-weight: 600;
+}
+
+.content h2{
+    font-size: 28px;
+    letter-spacing: 0.1px;
+    color: black;
+    font-weight: 800;
+    padding-bottom: 6px;
+}
+
+.course-item{
+    font-size: 16px;
+    color: gray;
+    display: -webkit-box ;
+    -webkit-line-clamp: 2;  
+    -webkit-box-orient: vertical; 
+    overflow: hidden;
+    margin-bottom: 12px;
+}
+
+.content a{
+    display: block;
+    border: 1px solid #000;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: unset;
+    color: #4b4b4b;
+    width: 80px;
+    padding: 8px;
+    border-radius: 30px;
+}
+
+.content a:hover{
+    background-color: blue;
+    border: 1px solid blue;
+    color: white;
+}
+
+.box{
+    background-color: blue;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 20px;
+}
+
+
